Fix hero heading, spacing and hero search

--- a/assets/scss/patterns/_booktower-components.scss
+++ b/assets/scss/patterns/_booktower-components.scss
@@ -36,6 +36,39 @@
   z-index: 1;
 }
 
+.input-group--hero.input-group-lg {
+  input.form-control {
+    border-radius: var(--bt-radius-lg) !important;
+    width: 100%;
+    position: relative;
+    height: 3.6rem;
+    font-size: var(--bt-text-md);
+  }
+
+  button.btn {
+    position: absolute;
+    top: 0.4rem;
+    right: 0.4rem;
+    border-radius: var(--bt-radius-md) !important;
+    height: 2.8rem;
+    font-size: var(--bt-text-md);
+  }
+}
+
+
+/* ── bt-section ──────────────────────────────────────────────────────────────── */
+
+.bt-section-landing {
+  padding: calc(var(--bt-sp-12)*3) 0;
+}
+
+.bt-section-landing--border {
+  border-bottom: var(--bt-border);
+}
+
+.bt-section-landing--light {
+  background-color: var(--bt-bg);
+}
 
 /* ── bt-navbar ──────────────────────────────────────────────────────────────── */
 .bt-navbar {
@@ -71,6 +104,9 @@
   color: var(--bt-gray-1000);
   font-weight: 500;
   font-size: var(--bt-text-sm);
+}
+.bt-navbar__logo {
+  max-width: 2.5rem;
 }
 .bt-navbar__link {
   font-size: var(--bt-text-sm);
